FSAT: - fixes navbar alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,4 +5,5 @@
 
 .brand-logo {
 	height: 50px;
+	margin-top: -15px;
 }
